--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,7 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {  
 margin: 0;  
 padding: 0;  
-border: 0;  
+/* border: 0;   */
 font-size: 100%;  
 font: inherit;  
 vertical-align: baseline;  
@@ -133,4 +133,70 @@ button:hover{
 }
 .artist img{
     width:100%;
+}
+
+/* styles for phone at 500px */
+@media (max-width: 500px){
+    * {
+        /* border: 2px solid lightgray; */
+    }
+
+    /* general styles */
+    body{
+        font-size: 1.2rem;
+    }
+
+    h1{
+        font-size:4rem;
+        margin:0;
+    }
+
+    /* header styles */
+
+
+    nav {
+        width: 30%;
+        /* justify-content: center; */
+    }
+
+    /* Title Section Styles */
+    .title-container div {
+        width: 100%;
+        max-width: 100%;
+        background-attachment: local;
+        /* max-width: 100%; */
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 25vh;
+    }
+
+    .title-container hr{
+        width:100%;
+    }
+
+    /* artist section styles */
+    .artists-container{
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+
+    .artist{
+        width:60%;
+        text-align:center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .artist img{
+        width:85%;
+        max-width: 100%;
+        height: 16vh;
+    }
+
+    .artist .bio{
+        width: 100%;
+        max-width: 100%;
+    }
 }
