--- a/css/index.css
+++ b/css/index.css
@@ -77,10 +77,12 @@ nav{
 nav a{
     color:#626262;
 }
+
 nav span{
     border-left:3px solid #626262;
 
 }
+
 /*Title Section Styles*/
 .title-container{
     display:flex;
@@ -135,13 +137,104 @@ button:hover{
     width:100%;
 }
 
-/* styles for phone at 500px */
-@media (max-width: 500px){
-    * {
+/* styles for desktop at 1200 */
+@media (max-width: 1200px){ 
+    *{
         /* border: 2px solid lightgray; */
     }
 
-    /* general styles */
+/* General Styles */
+    body{
+        color: #3b3b3b;
+    }
+
+    h1{
+        font-size:6rem;
+        margin:0;
+        font-weight: bolder;
+    }
+
+/* Header Styles */
+
+    nav{
+        align-items: flex-end;
+        justify-content: center;
+        width: 50%;
+    }
+
+    nav a{
+        color:#3b3b3b;
+        letter-spacing: 1px;
+        font-size: 2.2rem;
+        margin: 0 2%;
+        font-weight: 200;
+    }
+
+    nav span{
+        border-left:2px solid #3b3b3b;
+        height: 2.4rem;
+    }
+
+/* Title Section Styles */
+
+    .title-container div {		
+        color: white;	
+        width:90%;
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height:42vh;
+        margin:5% 0;
+    }
+
+    .title-container hr{
+        width:95%;
+        height: 1px;
+        background-color: lightgray;
+    }
+
+    button{
+        font-weight: 200;
+        letter-spacing: 1px;
+        color: #3b3b3b;
+    }
+
+/* Artist Section Styles */
+
+    .artists-container{
+        justify-content: space-evenly;
+        width:100%;
+        margin:0 auto;
+    }
+
+    .artist{
+        width:45%;
+        text-align:center;
+    }
+
+    .artist .bio{
+        margin-left: 0%;
+        margin-right: 0%;
+    }
+
+    .artist img{
+        max-width: 80%;
+        height: 20vh;
+        height: auto;
+        object-fit: cover;
+    }
+
+}
+
+
+/* styles for phone at 500px */
+@media (max-width: 500px){
+    *{
+        /* border: 2px solid lightgray; */
+    }
+
+/* general styles */
     body{
         font-size: 1.2rem;
     }
@@ -149,32 +242,55 @@ button:hover{
     h1{
         font-size:4rem;
         margin:0;
+        font-weight: bold;
     }
 
-    /* header styles */
+/* Header Styles */
 
 
     nav {
-        width: 30%;
+        width: 50%;
+        
         /* justify-content: center; */
     }
 
-    /* Title Section Styles */
+    nav a{
+        color:#3b3b3b;
+        letter-spacing: 1px;
+        font-size: 1.6rem;
+        margin: 0 2%;
+        font-weight: 200;
+    }
+
+    nav span{
+        border-left:1px solid #3b3b3b;
+        height: 2.2rem;
+    }
+
+/* Title Section Styles */
+
     .title-container div {
         width: 100%;
-        max-width: 100%;
-        background-attachment: local;
-        /* max-width: 100%; */
-        background-size: cover;
+        max-height: 25vh;
+        /* max-height: 25vh; */
+        background-position: center;
+        /* background-attachment: fixed; */
         background-repeat: no-repeat;
-        height: 25vh;
+        background-size: cover;
+        object-fit: cover;
     }
 
     .title-container hr{
         width:100%;
     }
 
-    /* artist section styles */
+    button{
+        font-size: 1.4rem;
+        
+    }
+
+/* Artist Section Styles */
+
     .artists-container{
         flex-direction: column;
         align-items: center;
@@ -182,7 +298,7 @@ button:hover{
     }
 
     .artist{
-        width:60%;
+        width:75%;
         text-align:center;
         display: flex;
         flex-direction: column;
@@ -192,7 +308,12 @@ button:hover{
     .artist img{
         width:85%;
         max-width: 100%;
-        height: 16vh;
+        object-fit: contain;
+    }
+
+    .artist .name{
+        margin-top: 1%;
+        margin-bottom: 0;
     }
 
     .artist .bio{
